# QaAgent

./: .env.example  .gitignore  Installation.md  README.md  pyproject.toml  requirements.txt
RagPipeline/: ingest.py  test_rag.py
agents/host_agent/: __main__.py  agent.py  agent_executor.py  description.txt  instructions.txt
agents/web_agent/: __main__.py  agent.py  agent_executor.py  description.txt  instructions.txt
app/cmd/: cmd.py
frontend/: amazon.html  app.py  general.html  index.html  pyproject.toml  script.js  scripts.html  styles.css  udemy.html
frontend/scripts/: amazon_search_iphone16.js  package-lock.json
knowledge_base/amazon/: testscript.txt
mcp/servers/context_retrieval/: amazon_in_test_cases.xlsx  context_retrieval.py  example_test_script.xlsx
mcp/servers/terminal_server/: terminal_server.py
utilities/common/: extract_code_from_test_script.py
utilities/mcp/: mcp_config.json  mcp_connect.py
